# ladyns

./: .gitignore  LICENSE  MANIFEST.in  README.md  meson.build  pyproject.toml  setup.py
example/: 1_1_Section_3_simulation.ipynb  1_3_Section_3_analyze_simulation.ipynb  2_1_Figure_10_competing_methods.ipynb  2_2_Figure_10_LaDynS.ipynb  2_3_Figure_10_DKCCA.ipynb  2_4_Figure_10_DLAG.ipynb  2_5_Figure_10_GPFA.ipynb  3_0_deciding_simulation_parameters_from_experimental_data.ipynb  3_1_Figure_11_competing_methods.ipynb  3_1_simulation.ipynb  3_2_Figure_11_LaDynS.ipynb  3_2_iterate_simulation.ipynb  3_3_Figure_11_DKCCA.ipynb  3_3_analyze_simulation.ipynb  3_4_Figure_11_DLAG.ipynb  3_5_Figure_11_GPFA.ipynb  3_6_Figure_11_competing_methods_single.ipynb  3_8_Figure_11_GPFA_single.ipynb  4_0_preprocess_experimental_data.ipynb  4_1_Section_4_preprocess_experimental_data.ipynb  4_1_analyze_experimental_data.ipynb  4_2_Section_4_analyze_experimental_data.ipynb  5_1_Appendix_C2_simulation_Appendix.ipynb  5_2_Appendix_B2_anlayze_sensitivity_analysis.ipynb  5_2_Appendix_C2_iterate_simulation.ipynb  6_1_Appendix_C1_simulation_without_coherence.ipynb  6_2_Appendix_C1_LaDynS_on_simulation_without_coherence.ipynb  7_3_Appendix_C2_analyze_simulation.ipynb  S6_1_effect_of_identifiability_constraint.ipynb
ladyns/: __init__.py  estimate.py
ladyns/optimize/: __init__.py  optimize.py
